{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 679,
  "lineage": "58901c7a-acb5-5f35-f4ce-76a75903b058",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tomcat-App-Server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8cb4bdc5bb2e6c0",
            "arn": "arn:aws:ec2:eu-west-1:795949543907:instance/i-0aefaeef277c9904e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aefaeef277c9904e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kits26kat2486",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-021add2e26f4f0823",
            "private_dns": "ip-10-0-3-171.eu-west-1.compute.internal",
            "private_ip": "10.0.3.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0239a9a21fd03fab3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096df1605f15408a9",
            "tags": {
              "Department": "Agriculture",
              "Environment": "wip",
              "Name": "Tomcat-Server-A"
            },
            "tags_all": {
              "Department": "Agriculture",
              "Environment": "wip",
              "Name": "Tomcat-Server-A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d301a8b715c2d336"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet_3",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tomcat-App-Server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8cb4bdc5bb2e6c0",
            "arn": "arn:aws:ec2:eu-west-1:795949543907:instance/i-08a6e1c912dbba0c2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a6e1c912dbba0c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kits26kat2486",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbe4561e3543a8b3",
            "private_dns": "ip-10-0-4-17.eu-west-1.compute.internal",
            "private_ip": "10.0.4.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8c49ad1c9639fc2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7b1d168adb7164c",
            "tags": {
              "Department": "Hydrid",
              "Environment": "wip",
              "Name": "Tomcat-Server-B"
            },
            "tags_all": {
              "Department": "Hydrid",
              "Environment": "wip",
              "Name": "Tomcat-Server-B"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d301a8b715c2d336"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet_4",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8cb4bdc5bb2e6c0",
            "arn": "arn:aws:ec2:eu-west-1:795949543907:instance/i-0af319aeeed267a46",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af319aeeed267a46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kits26kat2486",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e193bdaee74eca2b",
            "private_dns": "ip-10-0-2-232.eu-west-1.compute.internal",
            "private_ip": "10.0.2.232",
            "public_ip": "18.203.245.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b052f66d5cb29a5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bec8c7c6582482cb",
            "tags": {
              "Department": "NHS",
              "Environment": "wip",
              "Name": "Web-Server-B"
            },
            "tags_all": {
              "Department": "NHS",
              "Environment": "wip",
              "Name": "Web-Server-B"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d301a8b715c2d336"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet_2",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8cb4bdc5bb2e6c0",
            "arn": "arn:aws:ec2:eu-west-1:795949543907:instance/i-0e81035e5ecf506a1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e81035e5ecf506a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kits26kat2486",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-005a95f3448d1051d",
            "private_dns": "ip-10-0-1-19.eu-west-1.compute.internal",
            "private_ip": "10.0.1.19",
            "public_ip": "34.245.196.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5ee0f933af860c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6bf7f5db1454a5f",
            "tags": {
              "Department": "IT",
              "Environment": "wip",
              "Name": "Web-Server-A"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "wip",
              "Name": "Web-Server-A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d301a8b715c2d336"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:internet-gateway/igw-0f49ed03cbf334179",
            "id": "igw-0f49ed03cbf334179",
            "owner_id": "795949543907",
            "tags": {
              "Name": "wip"
            },
            "tags_all": {
              "Name": "wip"
            },
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "project03_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:loadbalancer/app/Assignment03-LB/938492b1bfd62b5f",
            "arn_suffix": "app/Assignment03-LB/938492b1bfd62b5f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Assignment03-LB-102580393.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:loadbalancer/app/Assignment03-LB/938492b1bfd62b5f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Assignment03-LB",
            "security_groups": [
              "sg-06e1d0e75897c0733"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bec8c7c6582482cb"
              },
              {
                "subnet_id": "subnet-0f6bf7f5db1454a5f"
              }
            ],
            "subnets": [
              "subnet-0bec8c7c6582482cb",
              "subnet-0f6bf7f5db1454a5f"
            ],
            "tags": {
              "Environment": "wip"
            },
            "tags_all": {
              "Environment": "wip"
            },
            "vpc_id": "vpc-00b4f5cfd158aa4b0",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.Project03",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:listener/app/Assignment03-LB/938492b1bfd62b5f/20eae6e5edcb5736",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:targetgroup/Assignment03-lb-tg/2d43d6d13a0404ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:listener/app/Assignment03-LB/938492b1bfd62b5f/20eae6e5edcb5736",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:loadbalancer/app/Assignment03-LB/938492b1bfd62b5f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.project03_lb",
            "aws_lb_target_group.project03",
            "aws_security_group.Project03",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:targetgroup/Assignment03-lb-tg/2d43d6d13a0404ee",
            "arn_suffix": "targetgroup/Assignment03-lb-tg/2d43d6d13a0404ee",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:795949543907:targetgroup/Assignment03-lb-tg/2d43d6d13a0404ee",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Assignment03-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:route-table/rtb-00e16ec5a83f275f2",
            "id": "rtb-00e16ec5a83f275f2",
            "owner_id": "795949543907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f49ed03cbf334179",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Kay-Public"
            },
            "tags_all": {
              "Name": "Kay-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Project03",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb4fc5f249900897",
            "route_table_id": "rtb-00e16ec5a83f275f2",
            "subnet_id": "subnet-0f6bf7f5db1454a5f"
          },
          "dependencies": [
            "aws_internet_gateway.Project03",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0376ac73cc756bf75",
            "route_table_id": "rtb-00e16ec5a83f275f2",
            "subnet_id": "subnet-0bec8c7c6582482cb"
          },
          "dependencies": [
            "aws_internet_gateway.Project03",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:security-group/sg-06e1d0e75897c0733",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e1d0e75897c0733",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "project_two",
            "name_prefix": "",
            "owner_id": "795949543907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Kay-Security-Group-Project03"
            },
            "tags_all": {
              "Name": "Kay-Security-Group-Project03"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:subnet/subnet-096df1605f15408a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096df1605f15408a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795949543907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kay_Private_Subnet_1"
            },
            "tags_all": {
              "Name": "Kay_Private_Subnet_1"
            },
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:subnet/subnet-0e7b1d168adb7164c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7b1d168adb7164c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "795949543907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kay_Private_Subnet_2"
            },
            "tags_all": {
              "Name": "Kay_Private_Subnet_2"
            },
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:subnet/subnet-0f6bf7f5db1454a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6bf7f5db1454a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795949543907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kay_Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Kay_Public_Subnet_1"
            },
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:subnet/subnet-0bec8c7c6582482cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bec8c7c6582482cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795949543907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kay_Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Kay_Public_Subnet_2"
            },
            "vpc_id": "vpc-00b4f5cfd158aa4b0"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:795949543907:vpc/vpc-00b4f5cfd158aa4b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a71b5b82996936c",
            "default_route_table_id": "rtb-02e2d7ec635564006",
            "default_security_group_id": "sg-0d301a8b715c2d336",
            "dhcp_options_id": "dopt-0ff8e5db800bc38f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b4f5cfd158aa4b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e2d7ec635564006",
            "owner_id": "795949543907",
            "tags": {
              "Name": "Project03"
            },
            "tags_all": {
              "Name": "Project03"
            }
          }
        }
      ]
    }
  ]
}